Setup navbar css and tag structures

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -5,3 +5,11 @@ $body-bg: #f5f8fa;
 $font-family-sans-serif: "Cabin", "San Francisco", "Helvetica Neue", sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
+
+// Colors
+$theme-primary: #2E7D32;
+$theme-primary-light: #50a946;
+$theme-primary-gradient: linear-gradient(110deg, $theme-primary, $theme-primary-light);
+
+// Shadows
+$standard-shadow: 0 1px 20px rgba(0, 0, 0, 0.25);
