--- a/public/css/app.css
+++ b/public/css/app.css
@@ -608,3 +608,93 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+body > main {
+  position: relative;
+}
+
+.ui-navigation-bar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  z-index: 999;
+}
+
+.ui-navigation-bar--transparent {
+  background: transparent;
+}
+
+.ui-navigation-bar__container {
+  max-width: 1440px;
+  width: 100%;
+  padding: 3rem 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.ui-navigation-bar__link {
+  padding: .8rem;
+  background: none;
+  margin: 0 .5rem;
+}
+
+.ui-navigation-bar__action {
+  padding: .8rem 1.4rem;
+  background: #7f7f7f;
+  border-radius: 2rem;
+}
+
+.ui-navigation-bar a {
+  color: #eff;
+  font-weight: bold;
+  text-decoration: none;
+  font-size: 1.3rem;
+  text-transform: capitalize;
+}
+
+.hero {
+  height: 100vh;
+  width: 100%;
+  left: 0;
+  top: 0;
+  position: absolute;
+  z-index: 1;
+}
+
+.primary-gradient {
+  background: linear-gradient(110deg, #2E7D32, #50a946) !important;
+}
+
+.overlay {
+  z-index: 9;
+}
+
+.overlay--black {
+  background: rgba(0, 0, 0, 0.55);
+  width: 100%;
+  height: 100%;
+  pointer-events: all;
+}
+
+.shadowed {
+  -webkit-box-shadow: 0 1px 20px rgba(0, 0, 0, 0.25);
+          box-shadow: 0 1px 20px rgba(0, 0, 0, 0.25);
+}
+
