--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,10 +1,10 @@
+// Mixin functions
+@import "mixins";
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Cabin:400,500,600,700');
-
 // Reset
 @import "reset";
 @import "normalize";
-
 // Variables
 @import "variables";
 
@@ -14,4 +14,30 @@ body {
 	text-rendering: optimizeLegibility;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-font-smoothing: antialiased;
+
+	> main {
+		position: relative;
+	}
+}
+
+@import "components/nav-bar";
+@import "components/hero";
+
+.primary-gradient {
+	background: $theme-primary-gradient !important;
+}
+
+.overlay {
+	z-index: 9;
+
+	@include modifier('black') {
+		background: rgba(0, 0, 0, 0.55);
+		width: 100%;
+		height: 100%;
+		pointer-events: all;
+	}
+}
+
+.shadowed {
+	box-shadow: $standard-shadow;
 }
