Setup hero search container styles and html

--- a/resources/assets/sass/_mixins.scss
+++ b/resources/assets/sass/_mixins.scss
@@ -1,7 +1,7 @@
 /// Block Element
 /// @access public
 /// @param {String} $element - Element's name
-@mixin element($element) {
+@mixin has($element) {
 	&__#{$element} {
 		@content;
 	}
@@ -10,7 +10,7 @@
 /// Block Modifier
 /// @access public
 /// @param {String} $modifier - Modifier's name
-@mixin modifier($modifier) {
+@mixin as($modifier) {
 	&--#{$modifier} {
 		@content;
 	}
