--- a/public/css/app.css
+++ b/public/css/app.css
@@ -624,6 +624,8 @@ body > main {
           align-items: center;
   position: relative;
   z-index: 999;
+  top: 0;
+  left: 0;
 }
 
 .ui-navigation-bar--transparent {
@@ -633,7 +635,7 @@ body > main {
 .ui-navigation-bar__container {
   max-width: 1440px;
   width: 100%;
-  padding: 3rem 2rem;
+  padding: 3.5rem 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -676,21 +678,131 @@ body > main {
   top: 0;
   position: absolute;
   z-index: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.hero__background {
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: url("/assets/images/hero/clipboard-field.png") center center;
+  background-size: cover;
+  position: absolute;
+  z-index: 1;
+}
+
+.hero__content {
+  position: relative;
+  width: 90%;
+  max-width: 500px;
+  z-index: 10;
+}
+
+.hero__content__logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.hero__content__logo .logo--text {
+  font-size: 2.8rem;
+  font-weight: 700;
+  color: #fff;
+  padding-right: 1.4rem;
+  display: block;
+  text-transform: capitalize;
+}
+
+.hero__content__logo img {
+  display: block;
+  max-width: 56px;
+  height: 56px;
+}
+
+.hero__content__search-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 1rem .5rem;
+}
+
+.hero__content__search-container > * {
+  width: 100%;
+  height: 50px;
+  margin: .4rem 0;
+  background: #fff;
+  border-radius: 25px;
+}
+
+.hero__content__search-container .search-button {
+  outline: none;
+  border: none;
+  color: #eeffff;
+  font-size: 1.3rem;
+  font-family: inherit;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.hero__content__tips {
+  margin: 1.5rem 0 0;
+}
+
+.hero__content__tips p {
+  font-size: 1.2rem;
+  font-weight: 600;
+  text-align: center;
+  color: #fff;
 }
 
 .primary-gradient {
   background: linear-gradient(110deg, #2E7D32, #50a946) !important;
 }
 
-.overlay {
-  z-index: 9;
+.primary-gradient--reverse {
+  background: linear-gradient(250deg, #2E7D32, #50a946) !important;
 }
 
-.overlay--black {
-  background: rgba(0, 0, 0, 0.55);
+.overlay {
+  z-index: 9;
+  position: absolute;
   width: 100%;
   height: 100%;
   pointer-events: all;
+}
+
+.overlay--black {
+  background: -webkit-gradient(linear, left top, right bottom, from(rgba(9, 9, 9, 0.7)), color-stop(70%, rgba(29, 29, 29, 0.6)));
+  background: linear-gradient(to bottom right, rgba(9, 9, 9, 0.7), rgba(29, 29, 29, 0.6) 70%);
 }
 
 .shadowed {
