--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -24,17 +24,22 @@ body {
 @import "components/hero";
 
 .primary-gradient {
-	background: $theme-primary-gradient !important;
+	background: linear-gradient(110deg, $theme-primary, $theme-primary-light) !important;
+
+	@include as('reverse') {
+		background: linear-gradient(250deg, $theme-primary, $theme-primary-light) !important;
+	}
 }
 
 .overlay {
-	z-index: 9;
+	z-index: $overlay-index;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	pointer-events: all;
 
-	@include modifier('black') {
-		background: rgba(0, 0, 0, 0.55);
-		width: 100%;
-		height: 100%;
-		pointer-events: all;
+	@include as('black') {
+		background: linear-gradient(to bottom right, rgba(#090909, 0.7), rgba(#1D1D1D, 0.6) 70%);
 	}
 }
 
