--- a/resources/assets/sass/components/nav-bar.scss
+++ b/resources/assets/sass/components/nav-bar.scss
@@ -2,10 +2,11 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	position: relative;
+	position: absolute;
 	z-index: $navigation-bar-index;
 	top: 0;
 	left: 0;
+	width: 100vw;
 	
 	@include as('transparent') {
 		background: transparent;
