Update action button to white background

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -15,6 +15,9 @@ $theme-footer-gradient: linear-gradient(to bottom, $theme-footer-light, #2a692d 
 
 // Widths & Heights
 $footer-curve-height: 95px;
+$container-width-large: 1440px;
+$container-width-medium: 930px;
+$container-width-small: 620px;
 
 // Shadows
 $standard-shadow: 0 1px 20px rgba(0, 0, 0, 0.25);
