--- a/resources/assets/sass/components/footer.scss
+++ b/resources/assets/sass/components/footer.scss
@@ -21,6 +21,15 @@
 		}
 	}
 
+	@include has('container') {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+		max-width: $container-width-large;
+		width: 100%;
+	}
+
 	@include has('main') {
 		display: flex;
 		justify-content: space-around;
@@ -69,8 +78,36 @@
 		}
 	}
 
-	@include has('links') {
+	@include has('related') {
+		margin: 0 2rem;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
 
+	@include has('links') {
+		margin: 0 2.5rem;
+
+		@include has('heading') {
+			font-size: 1.3rem;
+			font-weight: 700;
+			margin-bottom: 2rem;
+			text-transform: uppercase;
+			letter-spacing: .15rem;
+		}
+
+		@include has('list') {
+			li {
+				display: block;
+				margin: 1.2rem 0;
+
+				a {
+					color: rgba(#fff, 0.8);
+					font-size: 1.1rem;
+					font-weight: 300;
+				}
+			}
+		}
 	}
 
 	@include has('separator') {
