--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -30,3 +30,7 @@ select:-webkit-autofill:focus {
 	-webkit-box-shadow: 0 0 0px 0px transparent inset;
 	transition: background-color 5000s ease-in-out 0s;
 }
+
+a {
+	text-decoration: none;
+}
